<resources>
    <string name="app_name">Hacker News</string>
    <string name="action_settings">Settings</string>

    <!--<string name="dummy_by">by Tarun</string>-->
    <!--<string name="dummy_score">965 pts</string>-->
    <!--<string name="dummy_comment">8 comments</string>-->
    <!--<string name="dummy_timestamp">2 hrs ago</string>-->
    <!--<string name="dummy_title">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>-->
    <string name="dummy_by">...</string>
    <string name="dummy_score">...</string>
    <string name="dummy_comment">...</string>
    <string name="dummy_timestamp">...</string>
    <string name="dummy_title">......</string>
</resources>
