<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/mini_spacing"
    app:cardBackgroundColor="@color/colorLight"
    app:cardCornerRadius="@dimen/card_corner_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/mini_spacing">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/by_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/dummy_by"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_caption"
                android:textStyle="italic" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/timestamp_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/dummy_timestamp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_caption"
                android:textStyle="italic" />
        </LinearLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mini_spacing"
            android:maxLines="2"
            android:text="@string/dummy_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_subheading" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mini_spacing"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/comment_icon"
                android:layout_height="@dimen/comment_icon"
                android:src="@drawable/ic_comment" />

            <TextView
                android:id="@+id/comment_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/micro_spacing"
                android:text="@string/dummy_comment"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_caption" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/score_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/micro_spacing"
                android:text="@string/dummy_score"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_caption" />

            <ImageView
                android:layout_width="@dimen/score_icon"
                android:layout_height="@dimen/score_icon"
                android:src="@drawable/ic_score" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>